# pytreez

./: .gitignore  README.md  pyproject.toml  setup.py
pytreez/: __init__.py  v1.py  v2.py
tests/: test_pytreez.py
